# documentation

./: .gitignore  CNAME  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: documentation.yml
docs/: index.md
docs/explanations/: about-databases.md  about-ddd.md  about-docker-and-docker-compose.md  about-domain-driven-design.md  about-dotenv-support.md  about-dvc.md  about-envsubst.md  about-exoscale.md  about-fastapi.md  about-flake8.md  about-github-actions.md  about-github-secrets.md  about-github.md  about-glitchtip.md  about-heia-fr.md  about-kubectl.md  about-kubernetes.md  about-material-for-mkdocs.md  about-minikube.md  about-minio.md  about-postgresql.md  about-pydantic.md  about-pytest.md  about-python-pitfalls.md  about-python.md  about-sqlalchemy.md  about-sqlite.md  about-sqlmodel.md  about-this-documentation.md  about-yq.md
docs/how-to-guides/: how-to-add-dvc-to-a-service.md  how-to-build-publish-and-deploy-a-service.md  how-to-configure-a-new-github-repository.md  how-to-create-a-new-service.md  how-to-deploy-the-core-engine-on-a-exoscale-kubernetes-cluster.md  how-to-deploy-the-core-engine-on-an-exoscale-kubernetes-cluster.md  how-to-update-the-documentation.md
docs/overrides/: home.html
docs/reference/: chatbot-ollama.md  common-code.md  core-engine.md  glitchtip.md  image-utilities.md  index.md  mdwrap.md  team.md
docs/stylesheets/: extra.css
docs/tutorials/: create-a-pipeline-that-blurs-faces-in-an-image.md  getting-started.md  (+8 more)
presentation/: README.md
(+47 files in other folders)
