[project]
name = "documentation"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "CairoSVG==2.7.1",
    "mdwrap @ git+https://github.com/swiss-ai-center/mdwrap.git@1e7870e1446def80e087628feb2d2e40278366f4",
    "mkdocs-git-revision-date-localized-plugin==1.3.0",
    "mkdocs-glightbox==0.4.0",
    "mkdocs-material==9.5.44",
    "mkdocs-minify-plugin==0.8.0",
    "pillow==11.0.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "build==1.2.2.post1",
    "flake8==7.1.1",
    "flake8-blind-except==0.2.1",
    "flake8-bugbear==24.10.31",
    "flake8-comprehensions==3.16.0",
    "flake8-docstrings==1.7.0",
    "flake8-implicit-str-concat==0.5.0",
    "isort==5.13.2",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
]

[tool.uv]
package = false
